--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
         <pdfbox.version>2.0.19</pdfbox.version>
         <lombok.version>1.18.12</lombok.version>
+        <zxing.version>3.4.0</zxing.version>
     </properties>
 
     <dependencies>
@@ -33,6 +34,19 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
+        <!--二维码 zxing-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>${zxing.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${zxing.version}</version>
+        </dependency>
+
+        <!--pdf-->
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
